feat: :sparkles: update extension metadata and snippets for NestJS Swagger

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vscode-nestjs-swagger-snippets",
-  "displayName": "NestJS Swagger Snippets for VSCode Editor",
-  "description": "This extension for Visual Studio Code adds snippets for Swagger for NestJS.",
-  "version": "1.1.0",
+  "displayName": "NestJS Swagger (OpenAPI) Snippets - NestJS Tools Collection",
+  "description": "VS Code snippets for NestJS Swagger (OpenAPI). Quickly insert @nestjs/swagger decorators and DocumentBuilder methods to document APIs faster.",
+  "version": "1.2.0",
   "icon": "icon.png",
   "license": "MIT",
   "publisher": "imgildev",
@@ -29,6 +29,9 @@
     "swagger-snippet",
     "swagger-snippets",
     "swagger",
+    "openapi",
+    "documentbuilder",
+    "decorators",
     "vscode-extension",
     "vscode-nestjs-snippets",
     "vscode-nestjs-swagger-snippets",
